# Training-CPP-Examples

./: CMakeLists.txt
Apps/: BookApp.cpp  BookApp.h  MainApp.cpp
Book/: Book.cpp  Book.h  Page.h  Section.h
Commands/: ExitCommand.cpp  RunAppCommand.cpp
Core/: App.cpp  App.h
States/Book/: PageState.h  QuestionState.h  SectionState.h
